lupdate: Handle translation comments in ternary expressions

When the condition in a ternary operator expression was anything more
than a single identifier translation comments were not recognized for
translations within the values. Re-enabling translator comment detection
after the question mark fixes that.

Task-number: QTBUG-48776
Change-Id: I83bb9efaab42c52fc05a39094060eb0a1fb76d94
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@theqtcompany.com>